main navigation small iphone fix

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -89,6 +89,8 @@
 }
 
 .list {
+	height: calc(100% - 66px);
+	overflow-y: auto;
 	margin: 0;
 	
 	@include respond-to-min($screen-medium) {
